more work on member profiles, fixed some layout bugs, started work on image galleries

--- a/themes/fotoclub/css/form.css
+++ b/themes/fotoclub/css/form.css
@@ -1,19 +1,20 @@
-fieldset { background: #E0E0E0; padding: 10px; padding-bottom: 0; width: 510px; margin-bottom: 10px; border: #B5B5B5 1px solid; }
+fieldset { background: #E0E0E0; padding: 10px; padding-bottom: 0; width: 900px; margin-bottom: 10px; border: #B5B5B5 1px solid; }
+fieldset .column2 { width: 430px; float: left; margin-right: 20px; }
 fieldset h2 { color: #000; background: none; border: none; padding: 0; width: auto; }
-
-input.text, select, textarea, #Form_EditProfileForm_Avatar { width: 500px; margin-bottom: 10px; }
+fieldset .htmleditor { margin-bottom: 10px; }
+input.text, select, textarea, #Form_EditProfileForm_Avatar { width: 100%; margin-bottom: 10px; }
 textarea { height: 200px; }
 
 
 /* SEARCH BOX 
 ---------------------------------------- */
-#mainsearch { padding-top: 2px; width: 220px; float: right; text-align: right; margin-right: 6px; }
-#mainsearch #SearchForm_SearchForm { width: 210px; }
+#mainsearch { padding-top: 2px; width: 216px; float: right; text-align: right; margin-right: 6px; }
+#mainsearch #SearchForm_SearchForm { width: 206px; }
 #mainsearch div { float: left; }
-#mainsearch fieldset { padding: 0; margin: 0; width: auto; background: none; }
+#mainsearch fieldset { padding: 0; margin: 0; width: auto; background: none; border: none; }
 #mainsearch fieldset legend { display: none; }
-#mainsearch .action { height: 25px; margin-top: -3px; }
-#mainsearch form input { padding: 2px; margin: -1px 0 0; vertical-align: middle; }
+#mainsearch .action { height: 25px; margin-top: -1px; padding-top: 0; font-size: 12px; }
+#mainsearch form input { padding: 2px; margin: 0px 0 0; vertical-align: middle; }
 #mainsearch form input.button { border: 0; }
 #mainsearch form input.text { width: 143px; }
 #mainsearch label { display: none; }
